--- a/index.html
+++ b/index.html
@@ -85,9 +85,12 @@
 
           <div class="row">
             <div class="six columns">
+              <p class="error">
 
+                
+              </p>
               <label for="">Bill type</label>
-              <input type="text" name="" value="" placeholder="enter 'call' or 'sms' " class="billTypeText">
+              <input type="text" name="" value="" placeholder="enter 'call' or 'sms' " class="billTypeText box">
               <button class="button-primary addToBillBtn" type="button" name="button" >Add</button>
           </div>
             <div class="six columns">
@@ -95,15 +98,15 @@
               <table>
                 <tr>
                   <td>Call total</td>
-                  <td>R<span class="callTotalOne">27.50</span></td>
+                  <td>R<span class="callTotalOne">0.00</span></td>
                 </tr>
                 <tr>
                   <td>SMS total</td>
-                  <td>R<span class="smsTotalOne">13.75</span></td>
+                  <td>R<span class="smsTotalOne">0.00</span></td>
                 </tr>
                 <tr>
                   <td>Total</td>
-                  <td class="red">R<span class="totalOne">41.25</span></td>
+                  <td class="red orange">R<span class="totalOne ">0.00</span></td>
                 </tr>
               </table>
             </div>
