--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <h1>Total phone bill</h1>
 
           <div class="">
-            During the codeX bootcamp you had to create the function below.
+            During the bootcamp you had to create the function below.
           </div>
 
           <br>
@@ -154,15 +154,15 @@
                   <table>
                     <tr>
                       <td>Call total</td>
-                      <td>R<span class="callTotalTwo">34.50</span></td>
+                      <td>R<span class="callTotalTwo">0.00</span></td>
                     </tr>
                     <tr>
                       <td>SMS total</td>
-                      <td>R<span class="smsTotalTwo">3.00</span></td>
+                      <td>R<span class="smsTotalTwo">0.00</span></td>
                     </tr>
                     <tr >
                       <td>Total</td>
-                      <td class="orange" >R<span class="totalTwo">37.50</span></td>
+                      <td class="orange" >R<span class="totalTwo">0.00</span></td>
                     </tr>
                   </table>
             </div>
