settings bill dom link

--- a/index.html
+++ b/index.html
@@ -235,7 +235,10 @@
     <script src="js/calculate-bill.js" charset="utf-8"></script>
     <script src="js/text-bill.js" charset="utf-8"></script>
     <script src="js/radio-bill.js" charset="utf-8"></script>
-    <script src="js/settings-bill.js" charset="utf-8"></script>
+    <!-- <script src="js/settings-bill.js" charset="utf-8"></script> -->
+    <script src="/js/settingsbill.js" charset="utf-8"></script>
+    <script src="/js/settingbillDom.js" charset="utf-8"></script>
+
 
   </body>
-</html>
+</html> 
